GWT code cleanup  - classes moved into more logical packages (e.g., curriculum related client classes are now all in ..gwt.client.curricula)  - lots of reusable code (that have been repeated in many places) moved to more generic widgets (see Égwt.client.widgets)  - more similar changes are likely to follow (e.g., I would like to use UniTimeTable whenever possible)

--- a/WebContent/styles/unitime.css
+++ b/WebContent/styles/unitime.css
@@ -427,6 +427,10 @@ h1 {
 	border-bottom: 1px solid #9CB0CE;
 }
 
+.unitime-TopLine {
+	border-top: 1px solid #9CB0CE;
+}
+
 .unitime-TimeGridHorizontalHeaderFirst {
 	border: 1px solid #9CB0CE;
 	background-color: #92c1f0;
@@ -1112,6 +1116,10 @@ h1 {
 	border-bottom: 1px solid #9CB0CE;
 }
 
+.unitime-NotPrintableTopLine {
+	border-top: 1px solid #9CB0CE;
+}
+
 .unitime-GrayText {
 	color: #777777;
 }
@@ -1150,6 +1158,9 @@ h1 {
 	  	border-bottom: 1px dashed black;
 	}
 	.unitime-NotPrintableBottomLine {
+		border: none;
+	}
+	.unitime-NotPrintableTopLine {
 		border: none;
 	}
 	.unitime-GrayText {
