UniTime extension of the gwt dialog box  - has small close icon in the top right corner  - allow using escape key to close, enter key to submit

--- a/WebContent/styles/unitime.css
+++ b/WebContent/styles/unitime.css
@@ -1181,3 +1181,22 @@ h1 {
 .unitime-Wrap {
 	white-space: normal;
 }
+
+.gwt-DialogBox .dialogContainer {
+  position: relative;  
+}
+.gwt-DialogBox .dialogControls { 
+  position: absolute;
+  top: -24px;
+  right: 4px;
+}
+.gwt-DialogBox .dialogControls a {
+  cursor: pointer;
+}
+.gwt-DialogBox .dialogControls .close {
+  display: block;
+  height: 13px;
+  width: 13px;  
+  background: transparent url(../images/dialog-close.png) center center no-repeat;
+  -background: transparent url(../images/dialog-close.gif) center center no-repeat;
+}
