People Lookup dialog  - added ability to show matches that do not have external id     - this feature is now enabled only on event pages (e.g., there is no point in showing such people on personal schedule page, as the external id is needed for the schedule lookup)     - such matches are grayed out and displayed on the bottom of the list (divided by a dash line from matches with external id, if both are present)

--- a/WebContent/styles/unitime.css
+++ b/WebContent/styles/unitime.css
@@ -285,6 +285,11 @@ h1 {
 	font-weight: normal;
 }
 
+.unitime-Disabled {
+	color: gray;
+	font-style: italic;
+}
+
 .unitime-ProgressMessage {
 	text-align: center;
 	font-style: italic;
@@ -429,6 +434,10 @@ h1 {
 
 .unitime-TopLine {
 	border-top: 1px solid #9CB0CE;
+}
+
+.unitime-TopLineDash {
+	border-top: 1px dashed #9CB0CE;
 }
 
 .unitime-TimeGridHorizontalHeaderFirst {
