--- a/WebContent/user/instructor.jspf
+++ b/WebContent/user/instructor.jspf
@@ -226,6 +226,6 @@
 				document.getElementById('lname').value = person[3];
 				document.getElementById('email').value = person[4];
 			}
-		});
+		}, "mustHaveExternalId");
 	}
 </script>
