--- a/WebContent/styles/unitime.css
+++ b/WebContent/styles/unitime.css
@@ -28,11 +28,17 @@
 .unitime-Footer {
 	font-size: x-small;
 	text-align: right;
+	vertical-align: top;
 	font-style: italic;
-	text-align: right;
 	color: #9CB0CE;
 	width: 100%;
 	margin-top: -6px;
+}
+
+.unitime-Disclaimer {
+	color: #777777;
+	text-align: center;
+	max-width: 800px;
 }
 
 .unitime-PrintIcon {
@@ -145,6 +151,7 @@ h1 {
 }
 
 .unitime-MainTable {
+	vertical-align: top;
 }
 
 .unitime-LoadingPanel {
@@ -1051,6 +1058,19 @@ h1 {
 	vertical-align: baseline;
 	background: #FFFFFF;
 	height: 22px;
+	border: 1px solid #9CB0CE;
+	padding: 2px;
+}
+
+.unitime-TextArea {
+	font-family: Verdana, sans-serif;
+	font-size: 8pt;
+	font-weight: 400;
+	font-style: normal;
+	color: #333333;
+	line-height: 15px;
+	vertical-align: baseline;
+	background: #FFFFFF;
 	border: 1px solid #9CB0CE;
 	padding: 2px;
 }
