--- a/WebContent/checkAdmin.jspf
+++ b/WebContent/checkAdmin.jspf
@@ -16,12 +16,11 @@
  * with this program; if not, write to the Free Software Foundation, Inc.,
  * 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
 --%>
-<%@ page import="org.unitime.timetable.model.Roles" %>
 <%@ page import="org.unitime.commons.web.Web" %>
 <%@ include file="checkLogin.jspf" %>
 <%@ include file="checkRole.jspf" %>
-<%	if (!Web.getUser(session).isAdmin()) { %>
- 	<jsp:forward page="/loginRequired.do">
-			<jsp:param name="message" value="Insufficient user privileges."/>
-	</jsp:forward>
-<% } %>
+<%
+	if (!Web.getUser(session).isAdmin()) {
+		throw new AccessDeniedException("Insufficient user privileges.");
+	}
+%>
