--- a/WebContent/checkLogin.jspf
+++ b/WebContent/checkLogin.jspf
@@ -17,14 +17,13 @@
  * 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
 --%>
 <%@ page import="org.unitime.commons.web.Web" %>
-<% if (!Web.isLoggedIn(session)) {%>
-	<% if (session.isNew()) { %>
- 		<jsp:forward page="/loginRequired.do">
-			<jsp:param name="message" value="Your timetabling session has expired. Please log in again."/>
-		</jsp:forward>
-	<% } else { %>
- 		<jsp:forward page="/loginRequired.do">
-			<jsp:param name="message" value="Login is required to use timetabling application."/>
-		</jsp:forward>
-	<% } %>
-<%}%>
+<%@page import="org.unitime.timetable.util.AccessDeniedException"%>
+<%
+	if (!Web.isLoggedIn(session)) {
+		if (session.isNew()) {
+			throw new AccessDeniedException("Your timetabling session has expired. Please log in again.");
+		} else {
+			throw new AccessDeniedException("Login is required to use timetabling application.");
+		}
+	}
+%>
