Copyright notice  - unified copyright messages to <tt:copy/> tag  - added text "distributed under GNU General Public License" (with the link to http://www.unitime.org/uct_license.php)  - added the following message in the source code, where the tt:copy tag is used:      <!-- WARNING: Changing or removing the copyright notice will violate the license terms. If you need a different licensing, please contact us at support@unitime.org -->

--- a/WebContent/initializationError.jspf
+++ b/WebContent/initializationError.jspf
@@ -20,7 +20,7 @@
 <%@page import="org.unitime.timetable.InitServlet"%>
 <%@page import="org.unitime.timetable.util.Constants"%>
 <% if (InitServlet.getInitializationException() != null) { %>
-	<table align="center" class="unitime-Footer">
+	<table align="center" class="unitime-Footer" style="margin-top: 50px; padding-left: 100px;">
 		<tr>
 			<td align="center" style="color:red;">
 				UniTime <%=(Constants.VERSION + "." + Constants.BLD_NUMBER).replace("@build.number@", "?")%> failed to start up properly, please check the application log for more details.<br/>
