--- a/WebContent/styles/unitime.css
+++ b/WebContent/styles/unitime.css
@@ -45,13 +45,16 @@
 }
 
 .unitime-Footer {
-	font-size: x-small;
-	text-align: right;
+	width: 100%;
+	margin-top: -6px;
+}
+
+.unitime-FooterText {
+	font-size: 9pt;
 	vertical-align: top;
 	font-style: italic;
 	color: #9CB0CE;
-	width: 100%;
-	margin-top: -5px;
+	white-space: nowrap;
 }
 
 .unitime-Disclaimer {
@@ -81,7 +84,15 @@ A.unitime-SimpleLink:link,A.unitime-SimpleLink:visited,A.unitime-SimpleLink:acti
 	color: inherit;
     text-decoration: none;
     background-color : transparent;
+    vertical-align: middle;
 }
+
+A.unitime-NoFancyLink:link,A.unitime-NoFancyLink:visited,A.unitime-NoFancyLink:active,A.unitime-NoFancyLink:hover {
+	color: black;
+    text-decoration: none;
+    background-color : transparent;
+}
+
 
 h1 {
   font-size: 2em;
@@ -327,7 +338,7 @@ h1 {
 
 .unitime-TextBoxHint {
 	font-family: Verdana, sans-serif;
-	font-size: 6pt;
+	font-size: xx-small;
 	font-weight: 400;
 	font-style: normal;
 	color: #AAAAAA;
@@ -1247,4 +1258,16 @@ h1 {
   width: 13px;  
   background: transparent url(../images/dialog-close.png) center center no-repeat;
   -background: transparent url(../images/dialog-close.gif) center center no-repeat;
+}
+
+.unitime-MessageBlue {
+	color: black;
+	background: #DFE7F2;
+	border-bottom: 1px black solid;	
+}
+
+.unitime-MessageYellow {
+	color: black;
+	background: #fcdd89;
+	border-bottom: 1px black solid;	
 }
