Student Scheduling Assistant  - Adopted to use the new priority weighting model    - adding penalization for sections without time assignment, over expected sections, and sections that have a different time or instructor than selected  - Only show Enroll button when it is available  - Show LoadingWidget while waiting  - Display free time requests as red background in the timetable grid

--- a/WebContent/styles/unitime.css
+++ b/WebContent/styles/unitime.css
@@ -562,6 +562,11 @@ h1 {
 	width: 100%
 }
 
+.unitime-TimeGrid .busy {
+	background: #FFE1DD;
+	width: 100%
+}
+
 .unitime-TimeGrid .day-separator {
 	height: 100%;
 	position: absolute;
